--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -22,7 +22,13 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pytest
+        pip install -r requirements.txt
 
-    - name: Run tests
-      run: pytest
+    - name: List files in the repository
+      run: ls -R
+
+    - name: Debug pytest test discovery
+      run: pytest --collect-only
+
+    - name: Run tests with verbose output
+      run: pytest -v --tb=short
